<resources>
    <string name="app_name">FichaRPG</string>
    <string name="addButton">Add character</string>
    <string name="rowNameText">name</string>
    <string name="rowClassText">class</string>
    <string name="rowLevelText">level</string>
    <string name="saveButtonText">Save</string>
    <string name="characterNameHint">Name</string>
    <string name="characterClassHint">Class</string>
    <string name="characterLevelHint">Level</string>
    <string name="imageDescription">Profile picture</string>
    <string name="title_activity_teste">Teste</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="backgroundText">Background</string>
    <string name="raceText">Race</string>
    <string name="alingmentText">Alignment</string>
    <string name="gameSheetLogo">Logo of the game of the sheetDAndD</string>
    <string name="sheetViewNameText">Name</string>
    <string name="armorClassHint">CA</string>
    <string name="healthPointsHint">HP</string>
    <string name="initiativeHint">Init</string>
    <string name="classPlaceHolderText">class</string>
    <string name="levelTextHint">LV</string>
    <string name="raceTextHint">Race</string>
    <string name="hitPointLabel">Hit points</string>
    <string name="armorClassLabel">Armor class</string>
    <string name="initiativeLabel">Initiative</string>
    <string name="deleteCharacter">Delete</string>
    <string name="levelPresentation">\Level</string>
    <string name="classPresentation">\Class</string>
    <string name="titleSheet">Sheet</string>
    <string name="strenghLabel">Strength</string>
    <string name="strenghtHint">Str</string>
    <string name="dexterityLabel">Dexterity</string>
    <string name="constitutionLabel">Constitution</string>
    <string name="intelligenceLabel">Intelligence</string>
    <string name="wisdomLabel">Wisdom</string>
    <string name="charismaLabel">Charisma</string>
    <string name="proficiencyLabel">Proficiency bonus</string>
    <string name="proficiencyHint">Profici.</string>
    <string name="speedLabel">Speed</string>
    <string name="speedHint">Speed</string>
    <string name="mainTabText">Main</string>
    <string name="classTabText">Class</string>
    <string name="subClassTabText">Subclass</string>
    <string name="equipmentTabText">Equipment</string>
    <string name="spellsTabText">Spells</string>
    <string name="backstoryTabText">Backstory</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="statsMenuText">Stats</string>
    <string name="featureMenuText">Features</string>
    <string name="spellsMenuText">Spells</string>
    <string name="habilityPlaceHolder">ipslum lore</string>
    <string name="proficiencyMenuText">Skills</string>
    <string name="savingThrowLabel">Saving Throws</string>
    <string name="profileDescription">Profile Photo</string>
    <string name="skillsLabel">Skills</string>
    <string name="dexSkillsLabel">Dexterity skills</string>
    <string name="acrobaticsText">Acrobatics</string>
    <string name="stealthText">Stealth</string>
    <string name="strengthLabel">Strength skills</string>
    <string name="athleticsText">Athletics</string>
    <string name="arcanaSkillText">Arcana</string>
    <string name="historySkillText">History</string>
    <string name="investigatonSkillText">Investigation</string>
    <string name="natureSkillText">Nature</string>
    <string name="religionSkillText">Religion</string>
    <string name="intSkillsLabel">Intelligence skills</string>
    <string name="wisSkillsText">Wisdom skills</string>
    <string name="animHandSkillText">Animal handling</string>
    <string name="insightSkillText">Insight</string>
    <string name="medicineSkillText">Medicine</string>
    <string name="perceptionSkillText">Perception</string>
    <string name="survivalSkillText">Survival</string>
    <string name="chaSkillsLabelText">Charisma skills</string>
    <string name="deceptionSkillText">Deception</string>
    <string name="intimidationSkillText">Intimidation</string>
    <string name="performanceSkillText">Performance</string>
    <string name="persuasionSkillText">Persuasion</string>
    <string name="sleighHandSkillText">"Sleight of Hand "</string>
    <string name="addButtonText">Add Character</string>
    <string name="searchMenuText">Search</string>
    <string name="search_hint">Search sheets</string>
    <string name="addButtonCharacter">Character</string>
    <string name="ClassText">Class</string>
    <string name="buttonClassText">Class</string>
    <string name="spinnerToolTip">Select Class</string>
    <string name="classLogo">Class logo</string>
    <string name="addButtonClass">Class</string>
    <string name="addButtonCustom">Custom</string>
    <string name="addClassToSheetButton">Add Class</string>
    <string name="subclassText">Subclass</string>
    <string name="addButtonSubclass">Subclass</string>
    <string name="equipmentMenuText">Equip</string>
    <string name="addFeatureText">Feature</string>
    <string name="featureNameText">Feature name</string>
    <string name="featureDescriptionHint">Feature description</string>
    <string-array name="equipTypes">
        <item>Select type</item>
        <item>Heavy armor</item>
        <item>Medium armor</item>
        <item>Light armor</item>
        <item>Weapon</item>
        <item>Shield</item>
        <item>Consumable</item>
        <item>Ammo</item>
    </string-array>
    <string name="title_activity_add_feature">AddFeature</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="equipmentDescriptionHint">Equipment description</string>
    <string name="attackBonusHint">Attack bonus</string>
    <string name="damageBonusHint">Damage bonus</string>
    <string name="usagesHint">Usages</string>
    <string name="weightHint">Weight</string>
    <string name="amountHint">Amount</string>
    <string name="deleteEquipDescription">Delete equipment</string>
    <string name="addSubclassClass">Add</string>
    <string name="spellName">Name</string>
    <string name="spellLevel">Level</string>
    <string name="spellDescription">Description</string>
    <string name="somaticText">Somatic</string>
    <string name="verbalText">Verbal</string>
    <string name="materialText">Material</string>
    <string name="componentsText">Components</string>
    <string name="resetButtonText">Reset</string>
    <string name="okayText">OK</string>
    <string name="avgLifeButton">Average</string>
    <string name="randLifeButton">Dice</string>
    <string name="lifeInreaseText">Increase life based on</string>

</resources>