<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/spellName"
                style="@style/addThingsStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/roboto_medium"
                android:hint="@string/spellName"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/spellLevel"
                style="@style/addThingsStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/roboto_medium"
                android:hint="@string/spellLevel"
                android:importantForAutofill="no"
                android:inputType="number"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spellName"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/spellDescription"
                style="@style/addThingsStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/roboto_medium"
                android:hint="@string/spellDescription"
                android:importantForAutofill="no"
                android:inputType="textMultiLine|textImeMultiLine"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spellLevel"
                tools:ignore="TextContrastCheck" />


            <EditText
                android:id="@+id/spellComponents"
                style="@style/addThingsStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/roboto_medium"
                android:hint="@string/componentsText"
                android:importantForAutofill="no"
                android:inputType="textMultiLine|textImeMultiLine"
                android:minHeight="48dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/switchMaterial"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/roboto_medium"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/saveButtonText"
                app:backgroundTint="@color/material_dynamic_primary50"
                app:cornerRadius="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spellComponents" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchSomatic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto_medium"
                android:minHeight="48dp"
                android:minEms="8"
                android:padding="@dimen/padding"
                android:text="@string/somaticText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spellDescription" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchVerbal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto_medium"
                android:minHeight="48dp"
                android:minEms="8"
                android:padding="@dimen/padding"
                android:text="@string/verbalText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/switchSomatic" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchMaterial"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:minHeight="48dp"
                android:minEms="8"
                android:padding="@dimen/padding"
                android:text="@string/materialText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/switchVerbal" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>