<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/characterNameField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/characterNameHint"
                android:importantForAutofill="no"
                android:inputType="textPersonName|text"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/saveButtonText"
                android:textAllCaps="false"
                app:cornerRadius="14dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/characterAlignmentField" />

            <EditText
                android:id="@+id/characterBackgroundField"
                style="@style/characterInfoStyle"
                android:layout_marginTop="8dp"
                android:hint="@string/backgroundText"
                android:importantForAutofill="no"
                android:inputType="textPersonName|text"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/subclassText"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/characterRaceField"
                style="@style/characterInfoStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/raceText"
                android:importantForAutofill="no"
                android:inputType="textPersonName|text"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/characterBackgroundField"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/characterAlignmentField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/alingmentText"
                android:importantForAutofill="no"
                android:inputType="textPersonName|text"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/characterRaceField" />

            <EditText
                android:id="@+id/characterLevelField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:hint="@string/characterLevelHint"
                android:importantForAutofill="no"
                android:inputType="number"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/classTextView" />

            <Button
                android:id="@+id/addClassButton"
                style="@style/addClass_SubClassStyle"
                android:layout_marginTop="8dp"
                android:text="@string/buttonClassText"
                app:cornerRadius="14dp"
                app:icon="@drawable/ic_baseline_add_24"
                app:iconPadding="12dp"
                app:iconSize="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/characterNameField"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <!--        <androidx.appcompat.widget.AppCompatSpinner-->
            <!--            android:id="@+id/spinnerClass"-->
            <!--            android:layout_width="wrap_content"-->
            <!--            android:layout_height="wrap_content"-->
            <!--            android:gravity="center"-->
            <!--            android:isScrollContainer="true"-->
            <!--            android:minWidth="200dp"-->
            <!--            android:minHeight="48dp"-->
            <!--            android:padding="@dimen/padding"-->
            <!--            android:spinnerMode="dropdown"-->
            <!--            android:textAlignment="center"-->
            <!--            android:tooltipText="@string/spinnerToolTip"-->
            <!--            app:layout_constraintEnd_toEndOf="parent"-->
            <!--            app:layout_constraintStart_toStartOf="parent"-->
            <!--            tools:layout_editor_absoluteY="64dp" />-->

            <TextView
                android:id="@+id/classTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/ClassText"
                android:textAlignment="center"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addClassButton" />

            <Button
                android:id="@+id/addSubclassButton"
                style="@style/addClass_SubClassStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/subclassText"
                app:cornerRadius="@dimen/buttonCornerValue"
                app:icon="@drawable/ic_baseline_add_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/characterLevelField"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/subclassText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/subclassText"
                android:textAlignment="center"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addSubclassButton" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>