<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.proficiencys.Proficiencys">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:id="@+id/savingThrowsCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    app:cardCornerRadius="@dimen/cornerValue"
                    app:cardElevation="@dimen/sheetElementsElevation"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/proficiencyCard">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/savingThrowTitle"
                            style="@style/labelStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/padding"
                            android:text="@string/savingThrowLabel"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <CheckBox
                            android:id="@+id/strSavingThrow"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_medium"
                            android:padding="@dimen/padding"
                            android:text="@string/strenghLabel" />

                        <CheckBox
                            android:id="@+id/dexSavingThrow"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_medium"
                            android:padding="@dimen/padding"
                            android:text="@string/dexterityLabel" />

                        <CheckBox
                            android:id="@+id/conSavingThrow"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_medium"
                            android:padding="@dimen/padding"
                            android:text="@string/constitutionLabel" />

                        <CheckBox
                            android:id="@+id/intSavingThrow"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_medium"
                            android:padding="@dimen/padding"
                            android:text="@string/intelligenceLabel" />

                        <CheckBox
                            android:id="@+id/wisSavingThrow"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_medium"
                            android:padding="@dimen/padding"
                            android:text="@string/wisdomLabel" />

                        <CheckBox
                            android:id="@+id/chaSavingThrow"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_medium"
                            android:padding="@dimen/padding"
                            android:text="@string/charismaLabel" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/proficiencyCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:cardCornerRadius="@dimen/cornerValue"
                    app:cardElevation="@dimen/sheetElementsElevation"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/proficiencyLabel"
                            style="@style/atributeStyleLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:padding="@dimen/padding"
                            android:text="@string/proficiencyLabel"
                            android:textAlignment="center" />

                        <EditText
                            android:id="@+id/proficiencyText"
                            style="@style/classAndLevelStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@android:color/transparent"
                            android:importantForAutofill="no"
                            android:inputType="number"
                            android:minWidth="@dimen/minWidthText"
                            android:padding="@dimen/padding"
                            android:textAlignment="center"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            tools:ignore="TouchTargetSizeCheck,TextContrastCheck,SpeakableTextPresentCheck" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>